[package]
name = "worksheet-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
comrak = "0.42.0"
lol_html = "2.6.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml = "0.9.34"
slug = "0.1.6"
which = "8.0.0"
